@@ -456,4 +456,6 @@ Bugfixes (win32):
 
 - [Bug 3444941] ctypes.WinError() unicode error
 - [Bug 3550043] on Window in tools global name 'GetLastError' is not defined
+- [Bug pyserial:146] flush() does nothing in windows (despite docs)
+
 
